# tuxedo-control-center

./: .gitignore  CODING_GUIDELINES.md  DBus_Implementation_Analysis.md  INSTALLATION_COMPLETE.md  Profile_Management_Implementation.md  README.md  TESTING_WIDGET.md  WIDGET_TEST_GUIDE.md  keyboard_mapping_util.py  keyboard_zone_mappings.txt  package-lock.json  package.json  show-real-data.sh  test-dbus.sh  test-display-refresh.sh  test-fan-same-speed.sh  test-gui-dbus.js  test-odm-profile-worker.sh  test-prime-worker.sh  test-widget.sh
build-src/: after_install.sh  after_remove.sh  electron-builder.ts  package-files.txt
src/common/classes/: TccDBusController.ts
src/dist-data/: com.uniwill.tcc.metainfo.xml  com.uniwill.tomte.policy  com.uniwill.uccd.policy  com.uniwill.uccd.service  uccd.service
src/e-app/: TccTray.ts
src/native-lib/: tuxedo_io_napi.cc
src/native-lib/tuxedo_io_lib/targets/: clevo.h  dummy.h  uniwill.h
src/ng-app/app/: compatibility.service.ts
src/service-app/classes/: TccDBusInterface.ts  TccDBusService.ts  TuxedoControlCenterDaemon.ts  UccDBusService.ts
src/tccd-ng/: AutosaveManager.hpp  CMakeLists.txt  ProfileManager.hpp  README.md  SettingsManager.hpp  TccDBusService.cpp  TccDBusService.hpp  TccSettings.hpp  tccd-ng.cpp
src/tccd-ng/profiles/: DefaultProfiles.cpp  FanProfile.hpp  FanProfiles.cpp  TccProfile.hpp
src/tccd-ng/workers/: ChargingWorker.hpp  CpuWorker.hpp  DisplayBacklightWorker.hpp  FanControlWorker.hpp  KeyboardBacklightListener.hpp  NVIDIAPowerCTRLListener.hpp  ODMPowerLimitWorker.hpp  ODMProfileWorker.hpp  WebcamWorker.cpp  WebcamWorker.hpp  YCbCr420WorkaroundWorker.hpp
src/ucc/: CMakeLists.txt  CMakeLists.txt.bak  INSTALL_LOCAL.md  MONITORING_CHANGES.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  UCC_SETUP_SUMMARY.md  build-local.sh  build.sh  format-all.sh  run-ucc-gui-debug.sh  run-ucc-gui.sh  test-gui-output.sh  test-monitor  test-monitor.cpp  test-widget.sh
src/ucc/libucc-dbus/: CMakeLists.txt  TccdClient.cpp  TccdClient.hpp  UccdClient.cpp  UccdClient.hpp
src/ucc/ucc-gui/: AssignKeyZones.cpp  CMakeLists.txt  DashboardTab.cpp  DashboardTab.hpp  DetectLayout.cpp  FanCurveEditorWidget.cpp  FanCurveEditorWidget.hpp  HardwareTab.cpp  HardwareTab.hpp  KeyboardTab.cpp  KeyboardVisualizerWidget.cpp  KeyboardVisualizerWidget.hpp  LCTWaterCoolerController.cpp  LCTWaterCoolerController.hpp  MainWindow.cpp  MainWindow.hpp  ProfileManager.cpp  ProfileManager.hpp  SystemMonitor.cpp  SystemMonitor.hpp  main.cpp
src/ucc/ucc-gui/qml/: main.qml
src/ucc/ucc-tray/: CMakeLists.txt  main.cpp
src/ucc/ucc-tray/ui-mockups/: README.md
src/ucc/ucc-widgets/profile-switcher/package/contents/ui/: main.qml
src/ucc/ucc-widgets/system-monitor/package/contents/ui/: SystemMetricsProvider.qml  main.qml
src/uccd/: CMakeLists.txt  ProfileManager.hpp  README.md  StateUtils.hpp  TccDBusService.cpp  UccDBusService.cpp  UccDBusService.hpp  uccd.cpp
src/uccd/profiles/: DefaultProfiles.cpp  DefaultProfiles.hpp  FanProfile.hpp  FanProfiles.cpp  TccProfile.cpp  TccProfile.hpp  UccProfile.cpp  UccProfile.hpp
src/uccd/workers/: CpuPowerWorker.hpp  CpuWorker.hpp  DaemonWorker.hpp  DisplayBacklightWorker.hpp  DisplayRefreshRateWorker.hpp  FanControlWorker.hpp  GpuInfoWorker.hpp  KeyboardBacklightListener.hpp  NVIDIAPowerCTRLListener.hpp  ODMPowerLimitWorker.hpp  ODMProfileWorker.hpp  PrimeWorker.hpp  WebcamWorker.cpp  WebcamWorker.hpp
ucc/: CMakeLists.txt  PROJECT_STATUS.md  README.md
ucc/libucc-dbus/: CMakeLists.txt  TccdClient.cpp  TccdClient.hpp
ucc/ucc-gui/: CMakeLists.txt  ProfileManager.cpp  ProfileManager.hpp  SystemMonitor.cpp  SystemMonitor.hpp  main.cpp
ucc/ucc-gui/qml/: main.qml
ucc/ucc-tray/: CMakeLists.txt
ucc/ucc-widgets/: CMakeLists.txt
ucc/ucc-widgets/profile-switcher/package/contents/ui/: main.qml
ucc/ucc-widgets/system-monitor/package/contents/ui/: main.qml
